Fixed Button getting behind background

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html, body
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 2;
 }
 h1
 {
